@@ -5,8 +5,10 @@ vnstat \- a console-based network traffic monitor
 .SH SYNOPSIS
 
 .B vnstat
-.RB [ \-5Ddhlmqrstvw? ]
+.RB [ \-5bDedhlmqrstvw? ]
 .RB [ \-\-add ]
+.RB [ \-\-begin
+.IR date ]
 .RB [ \-\-config
 .IR file ]
 .RB [ \-\-create ]
@@ -16,6 +18,8 @@ vnstat \- a console-based network traffic monitor
 .RB [ \-\-dbdir
 .RI [ directory ]]
 .RB [ \-\-debug ]
+.RB [ \-\-end
+.IR date ]
 .RB [ \-\-fiveminutes
 .RI [ count ]]
 .RB [ \-\-help ]
@@ -94,6 +98,18 @@ or
 option.
 
 .TP
+.BI "-b, --begin " date
+Begin the list output with a specific date / time defined by
+.I date
+instead of the begin being selected based on the number of entries to be shown.
+If
+.I date
+isn't available in the database then the closest later date will be used.
+.I date
+supports the following formats: YYYY-MM-DD HH:MM, YYYY-MM-DD and YYYY-MM.
+This option can only be used with list outputs excluding top list.
+
+.TP
 .BI "--config " file
 Use
 .I file
@@ -119,6 +135,17 @@ file or the hardcoded default if no configuration file is available.
 .TP
 .B "-D, --debug"
 Show additional debug output.
+
+.TP
+.BI "-e, --end " date
+End the list output with a specific date / time defined by
+.I date
+instead of the latest date / time in the database. If
+.I date
+isn't available in the database then the closest earlier date will be used.
+.I date
+supports the following formats: YYYY-MM-DD HH:MM, YYYY-MM-DD and YYYY-MM.
+This option can only be used with list outputs excluding top list.
 
 .TP
 .BI "-5, --fiveminutes " [count]
